--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         最高學歷: 國立台灣科技大學-企業管理系-學士<br>
         興趣: 音樂/語言/心理學<br>
-        就學經歷: 高中社團社長, 大學社團財務長, 音樂人聲錄音, 歌曲編制, 志工等等<br>
+        就學經歷: 高中社團社長, 大學社團財務長, 音樂人聲錄音, 志工等等<br>
         現在: 臺灣科技大學企業管理系學生
       </p>
     </section>
@@ -77,9 +77,10 @@
         <div class="col-md-4">
           <div class="card mb-4">
             <div class="card-body">
-              <h3 class="card-title">Gemma3 多模態LLM應用範例</h3>
-              <img src="https://cdn.discordapp.com/attachments/852008221580984370/1376203271102009374/image.png?ex=683478ac&is=6833272c&hm=2ea9a939ad55fc6c17f4afea70fd0c048ec4fa4909d666c5a67da14c7815cdc8&" alt="Student Project" class="img-fluid mb-3">
-              <p class="card-text">同樣是使用Google Mediapipe，不同於此應用是來用於分析臉部，讓臉部的狀態可以用線條來呈現，可以成為繪畫工具或是建模工具。</p>
+              <h3 class="card-title">AI翻譯機</h3>
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uxdCGLrAIks" allowfullscreen></iframe>
+                <p class="card-text">使用多個大型語言模型，進行互動式的翻譯，並且可以透過各個模型使用不同的風格，透過對話學習語言知識。</p>
             </div>
           </div>
         </div>
